testsuite/gsksl/errors/negative-array-index.glsl

void
main  ()
{
  int x[10];
  
  int y = x[-3];
}
